2002-05-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/accidental.cc (after_line_breaking): add break tie
	reminders.

	* lily/text-engraver.cc (try_music): don't typeset fingerings

2002-05-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Handle \breve as a note (rest) duration.

2002-05-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/*.cc: change gh_str02scm() to ly_str02scm().

	* lily/spacing-spanner.cc (note_spacing): Bound
	shortest-playing-length by the distance to next note. This should
	fix chord tremolo spacing.

	* VERSION: 1.5.55 released

	* lily/stem.cc (off_callback): invisible stem over whole note is
	centered on note now.

	* lily/stem-engraver.cc (acknowledge_grob): X_AXIS Parent of
	stem-tremolo is stem now.

	* input/mozart-hrn*.ly: many corrections. 

	* lily/dynamic-engraver.cc (acknowledge_grob): add Scripts  to
	support for dynamic scripts.

	* lily/accidental-placement.cc (position_accidentals): check for
	collisions as well: should avoid those heads too.

	* lily/beam.cc (check_concave): allow undefined gap and
	threshold. Change the meaning of threshold/gap == 0.0.
	(check_concave): skip Stolba concaveness check if we have a knee
	on outer stems.

2002-05-03  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/chord-tremolo-engraver.cc (try_music): Handle chord
	tremolos of dotted duration.

2002-05-03  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-klef.mf: more twiddling with G clef. Almost straight
	downstroke again. Sigh.

	* lily/dynamic-engraver.cc (acknowledge_grob): center dynamic
	script on note head.

2002-05-02  Han-Wen  <hanwen@cs.uu.nl>

	* lily/slur.cc (add_column): allow slur over rest. 

2002-04-27  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc: move scoring constants out of code

2002-04-25  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-nummer.mf: scalability fixes.

	* mf/feta-nummer-code.mf: fixes for 5, 8. 

	* mf/feta-klef.mf: G clef fixes.

2002-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>
